two way communication fix

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,11 @@
 <body>
 
   <l-map
-    locations="[[10,20],[30,40]]"
-    tile-layer='https://tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png'
-    icon-url='https://zoranlj.000webhostapp.com/modities-map/Modus-Mark-White.png'>
+    locations='[[10,20],[30,40]]'
+    tilelayer='https://tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png'
+    iconurl='https://zoranlj.000webhostapp.com/modities-map/Modus-Mark-White.png'
+    center='[20,-10]'
+    zoom='3'>
   </l-map>
 
 </body>
