min max zoom attribute added.

--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,12 @@
 
   <l-map
     locations='[[10,20],[30,40]]'
-    tilelayer='https://tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png'
-    iconurl='https://zoranlj.000webhostapp.com/modities-map/Modus-Mark-White.png'
+    tile-layer='https://tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png'
+    icon-url='https://zoranlj.000webhostapp.com/modities-map/Modus-Mark-White.png'
     center='[20,-10]'
-    zoom='3'>
+    zoom='3'
+    min-zoom='2'
+    max-zoom='6'>
   </l-map>
 
 </body>
