--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
   <l-map
     locations='[[10,20],[30,40]]'
-    tile-layer='https://tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png'
+    tile-layer-url='https://tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png'
     icon-url='https://zoranlj.000webhostapp.com/modities-map/Modus-Mark-White.png'
     center='[20,-10]'
     zoom='3'
