--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,9 @@
     locations='[[10,20],[30,40]]'
     tile-layer-url='https://tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png'
     icon-url='https://zoranlj.000webhostapp.com/modities-map/Modus-Mark-White.png'
+    current-location-icon-url='https://zoranlj.000webhostapp.com/modities-map/Modus-Mark-Black.png'
     center='[20,-10]'
+    current-location='[0,0]'
     zoom='3'
     min-zoom='2'
     max-zoom='16'>
